fix text align

--- a/src/pages/Homev2/style.module.css
+++ b/src/pages/Homev2/style.module.css
@@ -313,7 +313,7 @@
     font-weight: 700;
     font-size: 52px;
     line-height: 78px;
-
+    text-align: center;
     color: #FFFFFF;
 }
 
